--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@
         </div> <!-- / .container -->
 
     </footer>
-
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-54af0b71-c144-4ab2-bed9-b20f31f1bb4d"></div>
 
     <!--  Page Scroll to Top  -->
 
